--- a/waybar/style-line.css
+++ b/waybar/style-line.css
@@ -1,81 +1,56 @@
+
 /* @import url('../../.cache/wal/colors-waybar.css'); */
 
 * {
-    font-size:14px;
+    font-size:15px;
     font-family: "CodeNewRoman Nerd Font Propo";
 }
 window#waybar{
-    all:unset;
-}
-.modules-left {
-    padding:2px 5px; 
-    margin:10 0 1 10;
     border-radius:10px;
-    background: alpha(black,.2);
-    box-shadow: 0px 0px 2px rgba(0, 0, 0, .6);
-}
-.modules-center {
-    padding:2px 5px;
-    margin:10 0 1 0;
-    border-radius:10px;
-    background: alpha(black,.2);
-    box-shadow: 0px 0px 2px rgba(0, 0, 0, .6);
-}
-.modules-right {
-    padding: 2px 5px;
-    margin: 10 10 1 0;
-    border-radius:10px;
-    background: alpha(black,.2);
+    background: alpha(@background,.6);
     box-shadow: 0px 0px 2px rgba(0, 0, 0, .6);
 }
 tooltip {
-    background: alpha(black,.5);
-    /* color: @color7; */
-    color: black;
+    background:@background;
+    color: @color7;
 }
 #clock:hover, #custom-pacman:hover, #custom-notification:hover,#bluetooth:hover,#network:hover,#battery:hover, #cpu:hover,#memory:hover,#temperature:hover{
     transition: all .3s ease;
-    /* color:@color9; */
     color:@color9;
 }
 #custom-notification {
-    padding: 0px 5px;
+    padding: 0px 5px 0 10;
     transition: all .3s ease;
-    /* color:@color7; */
     color:@color7;
 }
 #clock{
     padding: 0px 5px;
-    /* color:@color7; */
     color:@color7;
     transition: all .3s ease;
 }
 #custom-pacman{
     padding: 0px 5px;
     transition: all .3s ease;
-    /* color:@color7; */
     color:@color7;
 
 }
 #workspaces {
-    padding: 0px 5px;
+    padding: 7px 5px;
 }
 #workspaces button {
     all:unset;
     padding: 0px 5px;
-    /* color: alpha(@color9,.4); */
-    color: alpha(slategray,.5);
+    color: alpha(@color9,.4);
     transition: all .2s ease;
 }
 #workspaces button:hover {
-    color:alpha(lightgray,.2);
+    color:rgba(0,0,0,0);
     border: none;
     text-shadow: 0px 0px 1.5px rgba(0, 0, 0, .5);
-    transition: all .2s ease;
+    transition: all 1s ease;
 }
 #workspaces button.active {
-    /* color: @color9; */
-    color: white;
+    color: @color9;
     border: none;
     text-shadow: 0px 0px 2px rgba(0, 0, 0, .5);
 }
@@ -87,11 +62,10 @@ tooltip {
 #workspaces button.empty:hover {
     color: rgba(0,0,0,0);
     border: none;
-    text-shadow: 0px 0px 1.5px rgba(0, 0, 0, .3);
-    transition: all .2s ease;
+    text-shadow: 0px 0px 1.5px rgba(0, 0, 0, .5);
+    transition: all 1s ease;
 }
 #workspaces button.empty.active {
-    /* color: @color9; */
     color: @color9;
     border: none;
     text-shadow: 0px 0px 2px rgba(0, 0, 0, .5);
@@ -99,21 +73,18 @@ tooltip {
 #bluetooth{
     padding: 0px 5px;
     transition: all .3s ease;
-    /* color:@color7; */
     color:@color7;
 
 }
 #network{
     padding: 0px 5px;
     transition: all .3s ease;
-    /* color:@color7; */
     color:@color7;
 
 }
 #battery{
-    padding: 0px 5px;
+    padding: 0px 10px 0 5;
     transition: all .3s ease;
-    /* color:@color7; */
     color:@color7;
 
 
@@ -140,7 +111,7 @@ tooltip {
 }
 #custom-expand{
     padding: 0px 5px;
-    color:alpha(white,1);
+    color:alpha(@foreground,.2);
     text-shadow: 0px 0px 2px rgba(0, 0, 0, .7);
     transition: all .3s ease; 
 }
@@ -154,7 +125,6 @@ tooltip {
 #cpu,#memory,#temperature{
     padding: 0px 5px;
     transition: all .3s ease; 
-    /* color:@color7; */
     color:@color7;
 
 }
